crates/cinrs-core/tests/snapshots/cfg__automatic.snap
---
source: crates/cinrs-core/tests/cfg.rs
expression: automatic
---
pub unsafe extern "C" fn automatic(mut i: ::core::ffi::c_int) -> ::core::ffi::c_int {
    unsafe {
        let mut __cinrs_goto: ::core::ffi::c_ulong = 0;
        let mut table: __cinrs_align_16<[*mut ::core::ffi::c_void; 2]> = __cinrs_align_16(
            ::core::mem::zeroed::<[*mut ::core::ffi::c_void; 2]>(),
        );
        table.0 = [
            1usize as *mut ::core::ffi::c_void,
            2usize as *mut ::core::ffi::c_void,
        ];
        __cinrs_goto = (i as ::core::ffi::c_ulong).wrapping_add(1);
        match __cinrs_goto {
            1 => {
                return 2;
            }
            2 => {
                return 1;
            }
            _ => {
                if ::core::cfg!(debug_assertions) {
                    ::core::unreachable!()
                } else {
                    unsafe { ::core::hint::unreachable_unchecked() }
                }
            }
        }
    }
}
