crates/cinrs-core/tests/snapshots/cfg__only_a_table_that_is_only_read_is_folded.snap
---
source: crates/cinrs-core/tests/cfg.rs
expression: folded
---
pub unsafe extern "C" fn folded(mut i: ::core::ffi::c_int) -> ::core::ffi::c_int {
    unsafe {
        let mut __cinrs_goto: ::core::ffi::c_ulong = 0;
        __cinrs_goto = (i as ::core::ffi::c_ulong).wrapping_add(1);
        match __cinrs_goto {
            1 => {
                return 2;
            }
            2 => {
                return 1;
            }
            _ => {
                if ::core::cfg!(debug_assertions) {
                    ::core::unreachable!()
                } else {
                    unsafe { ::core::hint::unreachable_unchecked() }
                }
            }
        }
    }
}
